--- a/Index.html
+++ b/Index.html
@@ -37,9 +37,9 @@
         <h1> - Welcome! - </h1>
 
         <div>
-            <iframe src="https://dontpad.com/testando_projeto" id="iframe_style" scrolling="no">
+            <div contenteditable="true" id="iframe_style" scrolling="no">
 
-            </iframe>
+            </div>
         </div>
 
     </body>
